# WC

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  fly.toml
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 88b0b3c50e5c_add_fifa_pmsr_report_extraction.py  aba802112a71_initial_schema.py  c4d8e2f1a903_update_squad_season_columns.py  d7f1a2b3c4e5_add_simulation_team_r32_rivals.py
backend/scripts/: benchmark_simulation.py  counterfactual_m71.py
backend/src/world_cup_api/: __init__.py  config.py  main.py
backend/tests/: conftest.py
backend/tests/golden/: test_fifa_pmsr_report.py  test_official_standings.py
backend/tests/integration/: test_api.py  test_fifa_pmsr_migration.py  test_fifa_pmsr_persistence.py
backend/tests/unit/: test_annex_c.py  test_backtest.py  test_champion_market_sync.py  test_champion_markets.py  test_context_params.py  test_evaluation.py  test_fifa_pmsr_classify.py  test_fifa_pmsr_coordinates.py  test_fifa_pmsr_core_teams.py  test_fifa_pmsr_teams.py  test_group_a_simulation.py  test_group_situation.py  test_host_advantage.py  test_knockout_prediction.py  test_market_sync.py  test_match_context.py  test_md3_simulation.py  test_name_match.py  test_pmsr_features.py  test_pmsr_style.py  test_power_rankings.py  test_prediction.py  test_predictions_market.py  test_published_mode.py  test_quote_prices.py  test_r32_rivals.py  test_red_cards.py  test_simulation_context.py  test_simulation_coverage.py  test_simulation_snapshot.py  test_squad_rating.py  (+8 more)
(+181 files in other folders)
